Run JSpecify Conformance Tests (#2)
* Hello world gradle project

* add basic ci

* update ci

* add spotless

* Add basic test and JUnit dependency

* remove Mac files

* add JSpecify Conformance Tests

* removed unnecessary files

* Cleanup code

* remove ci for gradle PR

* Apply changes according to pr feedback

* clean up build.gradle